[package]
name = "xenocanto"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.4.0"
http-serde = "2.1.1"
jiff = { version = "0.2.23", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_variant = "0.1.3"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
